# calc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  dfa.dot  gen.sh  notes.md
.github/workflows/: c-cpp.yml
srcs/: calcdfafactory.cc  calcdfafactory.hpp  dfa.cc  dfa.hpp  dfabuilder.cc  dfabuilder.hpp  dfafactory.hpp  exception.hpp  hello.cc  main.cc  nodenamegen.hpp  paraValidator.hpp  parser.cc  parser.hpp  token.cc  token.hpp  tokengen.cc  tokengen.hpp  tokenimpl.cc  tokenimpl.hpp  validator.cc  validator.hpp  visitor.cc  visitor.hpp
tests/: test.cc  testParser.cc  testToken.cc
